# Project_X

./: .gitignore  CMakeLists.txt  README.md  build_all.sh
scripts/: README.md
src/headers/: CMain.h  main.h
src/sources/: CMain.cpp  main.cpp
